--- a/rover/partials/companyCard/rvCompanyCardContract.html
+++ b/rover/partials/companyCard/rvCompanyCardContract.html
@@ -3,7 +3,7 @@
 	<div id="cc-contracts-header" class="tab-header with-filters">
 		<div class="entry" ng-hide="contractList.isAddMode || contractList.isRenameMode">
 			<div class="select" >
-				<select iscroll-stop-propagation name="company-contract" ng-model="contractList.contractSelected">
+				<select convert-to-number iscroll-stop-propagation name="company-contract" ng-model="contractList.contractSelected">
 					<option value="" class="placeholder" disabled="" translate>SELECT_CONTRACT</option>
 					<optgroup label="Current">
 						<option  value="{{type.id}}" ng-selected="type.id==contractList.contractSelected" ng-repeat="type in contractList.current_contracts" >{{type.contract_name}}</option>
