CICO-36471 update accept button style

--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -316,8 +316,8 @@ a:hover,
         max-width: 285px !important;
     }
     .main-text {
-    font-size: 34px;
-}
+        font-size: 34px;
+    }
     .container {
         width: 100%;
     }
@@ -341,13 +341,17 @@ a:hover,
         margin-left: 95px !important;
     }
     .amount {
-    font-size: 21px;
-}
+        font-size: 21px;
+    }
+    .accept-charges {
+        padding: 5% 10%;
+        width: 100%;
+    }
 }
 
 @media (max-width: 890px) {
     .btn-template {
-        padding: 4% ;
+        padding: 4%;
     }
     .checkout-alone-button {
         margin-left: 95px !important;
