--- a/rover/partials/reservationCard/rvReservationHouseKeeping.html
+++ b/rover/partials/reservationCard/rvReservationHouseKeeping.html
@@ -32,7 +32,7 @@
             <h3 class="block-title">{{workType.name}}</h3>
             <div class="select">
                  <!-- Add attribute "disabled" when status set to No. Add class="placeholder" when no value option is selected -->
-                <select iscroll-stop-propagation
+                <select convert-to-number iscroll-stop-propagation
                     ng-class="{ 'placeholder': workType.default_task == '' }"
                     ng-model="workType.default_task"
                     ng-change="selectDefaultTask(workType)"
