CICO-38311: Fixed issue with rendering

--- a/rover/partials/reports/aging/reportRow.html
+++ b/rover/partials/reports/aging/reportRow.html
@@ -3,9 +3,9 @@
         <strong>{{item.account_name}}</strong>
     </td>
     <td>{{item.ar_number}}</td>
-    <td>{{item.0_30}} </td>
-    <td>{{item.31_60}}</td>
-    <td>{{item.61_90}}</td>
-    <td>{{item.91_120}}</td>
-    <td>{{item.120_plus}}</td>
+    <td>{{item.age_0to30}} </td>
+    <td>{{item.age_31to60}}</td>
+    <td>{{item.age_61to90}}</td>
+    <td>{{item.age_91to120}}</td>
+    <td>{{item.age_120plus}}</td>
 </tr>
