CICO-31474: added vip icon

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2807,7 +2807,7 @@
 
             &:not(:last-child) { margin-right: 20pt; }
         }
-    }
+    } 
 
 /* Work Management          ==============================*/
     #worksheet-content {
@@ -2922,7 +2922,7 @@
             }
 
             .icon-ok-10 {
-                order: 4;
+                order: 5;
                 margin-left: auto;
                 background: #fff;
                 .square(18pt);
@@ -2945,6 +2945,15 @@
                     .square(16pt);
                     .show;
                 }
+            }
+
+            .vip {
+                order: 4;
+                font-size: 7pt;
+                line-height: 18pt;
+                .square(16pt);
+                .show;
+                margin-left: auto;
             }
 
             .room {
