--- a/stylesheets/less/app/screens/15.work-management.less
+++ b/stylesheets/less/app/screens/15.work-management.less
@@ -425,6 +425,15 @@
                 right: 5px;
             }
 
+            .vip {
+                font-size: 9px;
+                line-height: 20px;
+                .square(18px);
+                position: absolute;
+                left: 10px;
+                bottom: 10px;
+            }
+
             &:first-child { #border-radius > .top(); }
 
             &:not(:first-child) {
