--- a/rover/partials/allotments/summary/allotmentDemographicsPopup.html
+++ b/rover/partials/allotments/summary/allotmentDemographicsPopup.html
@@ -18,7 +18,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="reservation-type" id="reservation-type" 
+                <select convert-to-number iscroll-stop-propagation name="reservation-type" id="reservation-type"
                     ng-class="{'placeholder': !allotmentConfigData.summary.demographics.reservation_type_id}" 
                     ng-model="allotmentConfigData.summary.demographics.reservation_type_id">
                     <option value="" selected translate>RESERVATION_TYPE_PLACEHOLDER</option>
@@ -38,7 +38,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="market" id="market" 
+                <select convert-to-number iscroll-stop-propagation name="market" id="market"
                     ng-class="{'placeholder': !allotmentConfigData.summary.demographics.market_segment_id}" 
                     ng-model="allotmentConfigData.summary.demographics.market_segment_id">
                     <option value="" selected translate>MARKET_PLACEHOLDER</option>
@@ -58,7 +58,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="source" id="source" 
+                <select convert-to-number iscroll-stop-propagation name="source" id="source"
                     ng-class="{'placeholder': !allotmentConfigData.summary.demographics.source_id}" 
                     ng-model="allotmentConfigData.summary.demographics.source_id">
                     <option value="" selected translate>SOURCE_PLACEHOLDER</option>
@@ -78,7 +78,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="origin" id="origin" 
+                <select convert-to-number iscroll-stop-propagation name="origin" id="origin"
                     ng-class="{'placeholder': !allotmentConfigData.summary.demographics.booking_origin_id}" 
                     ng-model="allotmentConfigData.summary.demographics.booking_origin_id">
                     <option value="" selected translate>ORIGIN_BOOKING_PLACEHOLDER</option>
@@ -98,7 +98,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="segment" id="segment" 
+                <select convert-to-number iscroll-stop-propagation name="segment" id="segment"
                     ng-class="{'placeholder': !allotmentConfigData.summary.demographics.segment_id}" 
                     ng-model="allotmentConfigData.summary.demographics.segment_id"
                     ng-disabled="!!allotmentConfigData.summary.demographics.segment_id && !!allotmentSummaryData.computedSegment">
