--- a/rover/partials/reservation/rvReservationDemographicsPopup.html
+++ b/rover/partials/reservation/rvReservationDemographicsPopup.html
@@ -15,7 +15,7 @@
             <label for="reservation-type">Reservation type<strong ng-show="otherData.reservationTypeIsForced">*</strong>
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="reservation-type" id="reservation-type" ng-class="{'placeholder': demographics.reservationType == ''}" ng-model="demographics.reservationType">
+                <select convert-to-number iscroll-stop-propagation name="reservation-type" id="reservation-type" ng-class="{'placeholder': demographics.reservationType == ''}" ng-model="demographics.reservationType">
                     <option value="" translate>RESERVATION_TYPE_PLACEHOLDER</option>
                     <option ng-repeat="reservationType in otherData.reservationTypes" value="{{reservationType.value}}" ng-selected="reservationType.value==demographics.reservationType">{{reservationType.name}}</option>
                 </select>
@@ -25,7 +25,7 @@
             <label for="market">Market<strong ng-show="otherData.marketIsForced">*</strong>
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="market" id="market" ng-class="{'placeholder': demographics.market == ''}" ng-model="demographics.market">
+                <select convert-to-number iscroll-stop-propagation name="market" id="market" ng-class="{'placeholder': demographics.market == ''}" ng-model="demographics.market">
                     <option value="" translate>MARKET_PLACEHOLDER</option>
                     <option ng-repeat="market in otherData.markets" value="{{market.value}}" ng-selected="market.value==demographics.market">{{market.name}}</option>
                 </select>
@@ -35,7 +35,7 @@
             <label for="source">Source<strong ng-show="otherData.sourceIsForced">*</strong>
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="source" id="source" ng-class="{'placeholder': demographics.source == ''}" ng-model="demographics.source">
+                <select convert-to-number iscroll-stop-propagation name="source" id="source" ng-class="{'placeholder': demographics.source == ''}" ng-model="demographics.source">
                     <option value="" translate>SOURCE_PLACEHOLDER</option>
                     <option ng-repeat="source in otherData.sources" value="{{source.value}}" ng-selected="source.value==demographics.source">{{source.name}}</option>
                 </select>
@@ -45,7 +45,7 @@
             <label for="origin">Origin of Booking<strong ng-show="otherData.originIsForced">*</strong>
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="origin" id="origin" ng-class="{'placeholder': demographics.origin == ''}" ng-model="demographics.origin">
+                <select convert-to-number iscroll-stop-propagation name="origin" id="origin" ng-class="{'placeholder': demographics.origin == ''}" ng-model="demographics.origin">
                     <option value="" translate>ORIGIN_BOOKING_PLACEHOLDER</option>
                     <option ng-repeat="origin in otherData.origins" value="{{origin.value}}" ng-selected="origin.value==demographics.origin">{{origin.name}}</option>
                 </select>
@@ -56,7 +56,7 @@
             <label for="origin">Segments<strong ng-show="otherData.segmentsIsForced">*</strong>
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="origin" id="origin" ng-class="{'placeholder': demographics.segment == ''}" ng-model="demographics.segment" ng-disabled="!!demographics.segment && !!summaryState.computedSegment">
+                <select convert-to-number iscroll-stop-propagation name="origin" id="origin" ng-class="{'placeholder': demographics.segment == ''}" ng-model="demographics.segment" ng-disabled="!!demographics.segment && !!summaryState.computedSegment">
                     <option value="" translate>SEGMENT_PLACEHOLDER</option>
                     <option ng-repeat="segment in otherData.segments" value="{{segment.value}}" ng-selected="segment.value==demographics.segment">{{segment.name}}</option>
                 </select>
