--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -2956,6 +2956,10 @@
                 margin-left: auto;
             }
 
+            .only-print {
+                display: inline-block;
+            }
+
             .room {
                  &:before {
                     content: "";
