--- a/stylesheets/less/app/screens/15.work-management.less
+++ b/stylesheets/less/app/screens/15.work-management.less
@@ -434,6 +434,10 @@
                 bottom: 10px;
             }
 
+            .only-print {
+                display: none;
+            }
+
             &:first-child { #border-radius > .top(); }
 
             &:not(:first-child) {
