CICO-37352 CICO-37353 updated styles

--- a/guestweb/common_css/basecamp_boulder/theme.less
+++ b/guestweb/common_css/basecamp_boulder/theme.less
@@ -45,7 +45,7 @@ a:hover,
 .phone-text:hover,
 .request-text,
 .error-text {
-    color: #fff;
+    color: #fff !important;
 }
 
 .view-bill {
@@ -57,7 +57,7 @@ a:hover,
 .query-text,
 .query-text:hover,
 .light-text {
-    color: #fff;
+    color: #fff !important;
 }
 
 .btn,
@@ -148,6 +148,10 @@ a:hover,
 .late-checkout-icon,
 .upgrade-icon {
     width: 50px;
+}
+
+.right-arrow-button {
+    background-image: url('/assets/guestweb/common_images/white/right_arrow.png');
 }
 
 
@@ -258,6 +262,10 @@ a:hover,
     color: #917437;
 }
 
+.main-text {
+    font-size: 40px;
+}
+
 textarea.sub-text,
 textarea.sub-text:hover {
     color: #000 !important;
@@ -278,6 +286,9 @@ textarea.sub-text:hover {
     .back-to-checkout {
         display: none;
     }
+    .main-text {
+    font-size: 37px;
+}
 }
 
 @media (max-width: 480px) {
