CICO-38303 fixing issue of showing room status popup while checkout even if it is set to false from admin side

--- a/rover/partials/validateCheckin/rvShowValidation.html
+++ b/rover/partials/validateCheckin/rvShowValidation.html
@@ -4,7 +4,7 @@
 			<span class="icons icon-close invert"></span>
 		</button>
 		<div class="h3 message">{{popupMessage}}</div>
-		<div class="status" ng-if="status === 'success' && reservationBillData.enable_room_status_at_checkout">
+		<div class="status" ng-if="status === 'success' && reservationBillData.enable_room_status_at_checkout === 'true'">
 		   <label for="room-status">Room Status</label>
 		   <div class="switch-button" ng-class="{'on': flag.roomStatusReady}">
 		      <input id="room-status" name="room-status" type="checkbox" value="not-ready" ng-model="flag.roomStatusReady">
