--- a/admin/partials/upsellLatecheckout/upsellLatecheckout.html
+++ b/admin/partials/upsellLatecheckout/upsellLatecheckout.html
@@ -8,7 +8,7 @@
 			<section class="content-scroll">
 				<div ng-include="'/assets/partials/common/notification_message.html'"></div>
 				<div id="new-form-holder" ng-show="isAddmode" ng-include="getTemplateUrl()"></div>
-				<form name="upsell-late-checkout" method="post" id="upsell-late-checkout" class="form float" action="">
+				<form class="form float">
 					<div class="form-title full-width">
 						<h3><span translate>LATE_CHECKOUT</span> {{'UPSELL' | translate}} </h3>
 					</div>
@@ -155,7 +155,7 @@
 							</div>
 							<div id='room-type-details' ng-repeat="roomType in upsellData.room_types">
 
-								<div class="entry full-width room-type-details" ng-show="roomType.max_late_checkouts !==''">
+								<div class="entry full-width room-type-details" ng-show="roomType.max_late_checkouts !=='' && roomType.max_late_checkouts !== null">
 									<div class="entry">
 										<span class="align-text-center"> {{roomType.name}} </span>
 									</div>
