CICO-38369 Configuration save issue in upsell early checkin fixed

--- a/admin/partials/earlyCheckin/adEarlyCheckin.html
+++ b/admin/partials/earlyCheckin/adEarlyCheckin.html
@@ -10,7 +10,7 @@
                                 
                                 <div ng-include="'/assets/partials/common/notification_success_message.html'"></div> 
                                 
-				<form name="upsell-early-checkin" method="post" id="upsell-early-checkin" class="form float" action="">
+				<form class="form float">
 					<div class="form-title full-width">
 						<h3><span translate>EARLY_CHECKIN_GENERAL</span> </h3>
 					</div>
