--- a/rover/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html
@@ -45,7 +45,7 @@
             <span class="icons icon-filter-room"></span>
         </button>
         <button type="button" class="button white with-icon only-icon" ng-class="{'active': diaryData.showFilterPanel}" ng-click="diaryData.showFilterPanel=!diaryData.showFilterPanel">
-            <span class="count">{{diaryData.filterCount}}</span>
+            <span class="count hidden">{{diaryData.filterCount}}</span>
             <span class="icons icon-filter" ng-class="{'active': diaryData.showFilterPanel}"></span>
         </button>
     </div>
