--- a/rover/partials/reports/roomOooOosReport/rvRoomOooOosReport.html
+++ b/rover/partials/reports/roomOooOosReport/rvRoomOooOosReport.html
@@ -32,7 +32,7 @@
                     <th class="cell-110">
                         <span class="sort"
                         	ng-class="{ 'sorting-asc' : isAsc(4), 'sorting-desc': isDesc(4) }"
-                        	ng-click="sortResultBy(chosenReport.sortByOptions[4], chosenReport)"	
+                        	ng-click="sortResultBy(chosenReport.sortByOptions[4], chosenReport)"
                         >End Date</span>
                     </th>
                     <th><span>Reason</span></th>
@@ -70,10 +70,6 @@
 	</div>
 </div>
 
-<div class="search-pagination hk-pagination" ng-show="!disablePrevBtn || !disableNextBtn">
-    <!-- removed buttons since they include +300ms delay on touch pads -->
-    <label class="button dark-grey next" ng-click="fetchNextPage()" ng-class="{'disabled': disableNextBtn}">Next</label>
-    <label class="button dark-grey prev" ng-click="fetchPrevPage()" ng-class="{'disabled': disablePrevBtn}">Previous</label>
-    <p>Showing <strong>{{ resultFrom }}-{{ resultUpto }}</strong> of <strong id="total-count">{{ netTotalCount }}</strong> items</p>
-</div>
+<rv-pagination  page-options="paginationConfig" page-data="totalCount">
+</rv-pagination>
 
