CICO-38432 Unable to add Room Type Limit to Upsell Setup Page for Room Upgrades - FIXED

--- a/admin/partials/roomUpsell/roomLevelTargets.html
+++ b/admin/partials/roomUpsell/roomLevelTargets.html
@@ -55,9 +55,9 @@
 
                         <div class='entry'>
                             <div class='add-room-type'>
-                                <button class='button green'  ng-class='{"overlay":!upsellData.selected_room_type && upsellData.selected_room_type !== 0}' id='add-room-type' ng-click="clickAddRoomType(false)" translate>
+                                <span class='button green'  ng-class='{"overlay":!upsellData.selected_room_type && upsellData.selected_room_type !== 0}' id='add-room-type' ng-click="clickAddRoomType(false)" translate>
                                     ADD_ROOM_TYPE
-                                </button>
+                                </span>
                             </div>
                         </div>
                         <div class='entry full-width' id='room-type-header'>
@@ -150,9 +150,9 @@
 
         <div class='entry'>
             <div class='add-room-type'>
-                <button class='button green' ng-class='{"overlay":!upsellData.next_day_selected_room_type && upsellData.next_day_selected_room_type !== 0}' id='add-room-type' ng-click="clickAddRoomType(true)" translate>
+                <span class='button green' ng-class='{"overlay":!upsellData.next_day_selected_room_type && upsellData.next_day_selected_room_type !== 0}' id='add-room-type' ng-click="clickAddRoomType(true)" translate>
                     ADD_ROOM_TYPE
-                </button>
+                </span>
             </div>
         </div>
         <div class='entry full-width' id='room-type-header'>
