--- a/admin/partials/roomUpsell/roomUpsell.html
+++ b/admin/partials/roomUpsell/roomUpsell.html
@@ -9,7 +9,7 @@
             <section class="content-scroll">
 		<div ng-include="'/assets/partials/common/notification_message.html'"></div>
 		<div ng-include="'/assets/partials/common/notification_success_message.html'"></div> 
-                <form name="upsell_rooms" method="post" id="upsell_rooms" class="form float" action="">
+                <form class="form float">
                     
                     <fieldset class="holder left no-margin-holder">
                         <div class="form-title">
