CICO-33619 added the ui changes

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -314,3 +314,10 @@
   font-size: 15px !important;
 }
 /* CICO-37049*/
+
+/* CICO-33619*/
+.addon-image-preview{
+  height: 100px !important;
+  margin-top: 20px;
+}
+/* CICO-33619*/
