--- a/guestweb/common_css/sandman_inn/theme.less
+++ b/guestweb/common_css/sandman_inn/theme.less
@@ -1,247 +1,321 @@
 /*------------------------------- Themes ----------------------------------------------------*/
 
 @import "../style.less";
-html,body{
-  height:auto !important;
-  min-height:100% !important;
+html,
+body {
+    height: auto;
+    min-height: 100%;
 }
-body{
-     background-color: #fff;
+
+body {
+    background-color: #F5A180;
 }
-.back-text{
-    color:#000 !important;
+
+.back-text {
+    color: #fff;
 }
-a,a:hover,.main-text,
+
+a,
+a:hover,
+.main-text,
 .res-date,
-.footer-sub-text,.footer-sub-text:hover,.phone-label{
-    color:#000;
+.footer-sub-text,
+.footer-sub-text:hover,
+.phone-label {
+    color: #fff;
 }
-.sub-main-text{
-    color:#000;
+
+.sub-main-text {
+    color: #fff;
 }
-.header-bar{
-   background-color:#fff;
+
+.header-bar {
+    background: #F5A180;
 }
-.template-text,.footer-text,
-.balance-amount,.phone-text,
-.phone-text:hover,.request-text,
+
+.logo-image {
+    max-width: 100%;
+    margin: 4% auto 2%;
+}
+
+.template-text,
+.footer-text,
+.balance-amount,
+.phone-text,
+.phone-text:hover,
+.request-text,
 .error-text {
-    color: #000 !important;
+    color: #fff !important;
 }
-.view-bill{
-    color: #54818c;
+
+.view-bill {
+    color: #647683;
 }
-.sub-text,.sub-text:hover,.query-text,.query-text:hover,.light-text{
-    color: #000 !important;
+
+.sub-text,
+.sub-text:hover,
+.query-text,
+.query-text:hover,
+.light-text {
+    color: #fff !important;
 }
-.btn,.btn:hover, .btn:focus{
-    background: #54818c;
+
+.btn,
+.btn:hover {
+    background: #647683;
+    color: @white;
+}
+
+.dual-button {
+    font-size: 35px;
+    font-weight: 300;
+}
+
+.btn-template {
+    font-size: 35px;
+    font-weight: 300;
+    padding: 4%;
+}
+
+.dark-button,
+.dark-button:hover {
+    background: #647683;
+}
+
+.light-button,
+.light-button:hover {
+    background: #CBCAC8;
+}
+
+.checkouttime1,
+.checkouttime1:hover {
+    background: #CBCAC8;
+}
+
+.checkouttime2,
+.checkouttime2:hover {
+    background: #647683;
+}
+
+.checkouttime3,
+.checkouttime3:hover {
+    background: #333841;
+}
+
+.no-thanks,
+.no-thanks:hover {
     color: #fff;
-}
-.dual-button{
-  font-size:25px;
-  font-weight:300;
-}
-.btn-template{
-  font-size:33px;
-  font-weight:300;
-  padding:4%;
-}
-.dark-button,.dark-button:hover{
-    background:  #54818c !important;
-}
-.light-button,.light-button:hover{
-    background: #6c959f !important;
-}
-.checkouttime1,.checkouttime1:hover{
-    background: #6c959f;
-}
-.checkouttime2,.checkouttime2:hover{
-    background:  #54818c;
-}
-.checkouttime3,.checkouttime3:hover{
-    background: #426d77;
-}
-.no-thanks,.no-thanks:hover{
-    color:#000 !important;
     text-decoration: underline;
-    text-transform:none;
+    text-transform: none;
 }
-.strong-font{
-  font-weight:500;
+
+.strong-font {
+    font-weight: 500;
 }
-.amount,.time{
-  font-size:30px;
-  line-height:1.2;
+
+.amount,
+.time {
+    font-size: 30px;
+    line-height: 1.2;
 }
-.down-arrow-button{
-    background-image:url('/assets/guestweb/common_images/black/down_arrow.png'); 
+
+.down-arrow-button {
+    background-image: url('/assets/guestweb/common_images/black/down_arrow.png');
 }
-.right-arrow-button{
-    background-image:url('/assets/guestweb/common_images/black/right_arrow.png');
+
+.right-arrow-button {
+    background-image: url('/assets/guestweb/common_images/black/right_arrow.png');
 }
-.checkout-icon {
-    background-image: url('/assets/guestweb/common_images/checkout_icon.png');
-}
-.late-checkout-icon {
-    background-image: url('/assets/guestweb/common_images/checkout_later.png');
-}
-.circle-bg {
-    background: url('/assets/guestweb/common_images/circle-bg.png') center top no-repeat;
-}
-.accept-charge-icon {
-    background-image: url('/assets/guestweb/common_images/creditcard_icon.png');
-}
+
 .upgrade-details .upgrades-btn {
-  background: #54818c; 
-  p {
-    color: #fff;
-  }
+    background: #647683;
 }
+
 .proceed-to-checkin {
-  background: #54818c;
-  color: #fff;
+    background: #3D3D3B;
 }
-.upgrades-label{
-  color:#BA7A55;
+
+.upgrades-label {
+    color: #BA7A55;
 }
-textarea.sub-text, textarea.sub-text:hover{
-  color:#5d4f45 !important;
+
+.input-field {
+    background-color: #F4F4F4;
 }
+
+.accept-charge-icon,
+.checkout-icon,
+.late-checkout-icon,
+.upgrade-icon {
+    width: 50px;
+}
+
+.right-arrow-button {
+    background-image: url('/assets/guestweb/common_images/white/right_arrow.png');
+}
+
 
 /*----------------- date picker -------------------------*/
 
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
-  color: #363634;
-  color: transparent;
+    color: #363634;
+    color: transparent;
 }
 
-.pickadate-cell .pickadate-enabled ,.pickadate-centered-heading{
-  color: #000 !important;
+.pickadate-cell .pickadate-enabled,
+.pickadate-centered-heading {
+    color: #000;
 }
 
 .pickadate-cell .pickadate-active {
-  background-color: #54818c !important;
-  color:#fff !important;
+    background-color: #647683 !important;
+    color: #fff;
 }
-.pickadate-head{
-    color:#000000;
+
+.pickadate-head {
+    color: #000000;
 }
+
 .calendar-selection {
-    color: #000;
+    color: #fff;
 }
+
 .pickadate-cell li:nth-child(1),
 .pickadate-cell li:nth-child(8),
 .pickadate-cell li:nth-child(15),
 .pickadate-cell li:nth-child(22),
 .pickadate-cell li:nth-child(29),
 .pickadate-cell li:nth-child(36) {
-  border-left: 1px solid #fff;
+    border-left: 1px solid #fff;
 }
 
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-enabled,
 .pickadate-cell .pickadate-outofrange-disabled {
-  background-color: #E5E5E5;
+    background-color: #EEEBE8;
 }
 
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-disabled a {
-  color: #ac9557;
+    color: #ac9557;
 }
-
 
 .pickadate-cell li {
-  border: 1px solid #fff;
+    border: 1px solid #FFF;
 }
-.pickadate a:visited, .pickadate a {
-  color: #666666;
+
+.pickadate a:visited,
+.pickadate a {
+    color: #666666;
 }
-.date-picker-header{
-  background-color: #fff;
+
+.date-picker-header {
+    background-color: #647683;
 }
-.calendar-selection {
-  div {
-    color: #000;
-  }
-}
+
 .calendar-back {
-  background-image: url('/assets/guestweb/common_images/blue/back_icon.png');
+    background-image: url('/assets/guestweb/common_images/back_icon.png');
 }
-.calendar-done{
-   background-image: url('/assets/guestweb/common_images/blue/done_icon.png');
+
+.calendar-done {
+    background-image: url('/assets/guestweb/common_images/done_white.png');
 }
-.back-to-checkout {
-    background: url('/assets/guestweb/common_images/black/back_icon.png') center top no-repeat;
-    height: 36px;
+
+.pickadate-cell .pickadate-active {
+    background-color: #647683;
 }
-.pickadate-prev,.pickadate-next,.pickadate-prev:hover,.pickadate-next:hover{
-  color:#54818c !important;
+
+.pickadate-prev,
+.pickadate-next,
+.pickadate-prev:hover,
+.pickadate-next:hover {
+    color: #611b12;
 }
-.green-button, .green-button:hover {
-    color: #fff;
-}
-.grey-terms-button, .grey-terms-button:hover {
-    color: #fff;
-}
+
 .date-picker-wrap {
-  background-color: #EEECE2 !important;
+    background-color: #fff;
 }
+
 .date-picker-bg {
-  background: unset;
+    background: unset;
 }
-.horizontal-line-sep-mobile{
-  border-top: 1px solid #9b9b9b;
+
+.horizontal-line-sep-mobile {
+    border-top: 1px solid #9b9b9b;
 }
-.departure-date{
-  color:#000;
+
+.departure-date {
+    color: #fff;
 }
-.date-text{
-  color:#000;
+
+.date-text {
+    color: #fff;
 }
-.res-details-heading,.res-details-heading:hover{
-    font-size:18px !important;
-    color: #54818c;
-}
+
 .logo-image {
-        margin: 3% 0px !important;
-        max-width: 358px;
+    margin: 1% auto;
+    max-width: unset;
+}
+
+.res-details-heading,
+.res-details-heading:hover {
+    color: #647683;
+}
+
+.main-text {
+    font-size: 40px;
+}
+
+textarea.sub-text,
+textarea.sub-text:hover {
+    color: #000 !important;
+}
+
+.back-to-checkout {
+    height: 32px;
+}
+
+@media (min-width:770px) {
+    .btn-template,
+    .dual-button {
+        font-size: 27px;
     }
+}
+
 @media (max-width: 990px) {
     .logo-image {
         margin: 9% auto 7%;
-        max-width: 230px;
+        max-width: unset;
     }
-    .back-to-checkout{
-        display:none;
+    .back-to-checkout {
+        display: none;
     }
-    .hide-in-desktop {
-       display: block;
-    }
-}
-@media (min-width: 990px){
-   .dual-button{
-     font-size:35px;
+    .main-text {
+        font-size: 37px;
     }
 }
-@media (max-width: 480px){
-  .main-text{
-    font-size:11vw;
-  }
-  .container{
-    width:100%;
-  }
-  .sub-main-text{
-     font-size:5.4vw !important;
-  }
-  .footer-text{
-     font-size:5.3vw;
-  }
-  .logo-image {
-     max-width:215px;
-  }
-  .dual-button{
-    font-size:32px;
-  }
 
+@media (max-width: 480px) {
+    .main-text {
+        font-size: 11vw;
+    }
+    .container {
+        width: 100%;
+    }
+    .sub-main-text {
+        font-size: 5.4vw;
+    }
+    .footer-text {
+        font-size: 5.3vw;
+    }
+    .logo-image {
+        max-width: 200px;
+        margin: 3% auto;
+    }
+    .dual-button {
+        font-size: 32px;
+    }
+    .section-container {
+        padding-bottom: 0px;
+    }
 }
