--- a/rover/partials/workManagement/rvWorkManagementMultiSheet.html
+++ b/rover/partials/workManagement/rvWorkManagementMultiSheet.html
@@ -83,7 +83,6 @@
                         jqyoui-draggable ="{index: {{$index}}, animate:false, onStart:'dragStart()', onStop:'dragDrop()', onDrag:'userDragging()'}"
                         data-jqyoui-options="{revert: 'invalid', helper:'clone', appendTo:'#worksheet-content .for-lone-task'}">
                         <div class="info">
-                            <span class="only-print" ng-bind="getRoomType(room.room_type)"></span>
                             <span ng-class="getReservationStatusClass(multiSheetState.allRooms[room.room_index])"
                                 ng-bind="getReservationStatusValue(multiSheetState.allRooms[room.room_index])"></span>
                             <span ng-class="getCurrentStatusClass(multiSheetState.allRooms[room.room_index])">
@@ -99,7 +98,7 @@
                             </span>
                         </h3>
                         <span class="task">{{task.task_name}}</span>
-                        <span ng-show="task.is_vip" class="vip" translate>VIP</span>
+                        <span ng-show="room.is_vip" class="vip" translate>VIP</span>
                     </li>
                 </ul>
             </div>
